--- a/website/templates/Jeu2-reveal.jinja
+++ b/website/templates/Jeu2-reveal.jinja
@@ -3,7 +3,7 @@
 {% set reveal_state = game.current_reveal_state %}
 {% set permutation = game.current_permutation %}
 {% extends "base.jinja" %}
-{% block title %}Flouze - Jeu 2{% endblock %}
+{% block title %}{{text["game 2"][player.lang_id]}}{% endblock %}
 {% block content %}
 
 <div class="w3-center contrainte_reveal animate__animated animate__fadeIn" style="display:flex; justify-content:center; align-items:center; flex-wrap:wrap; gap:20px">
