--- a/website/templates/Jeu2-choix.jinja
+++ b/website/templates/Jeu2-choix.jinja
@@ -1,12 +1,12 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
 {% extends "base.jinja" %}
-{% block title %}Flouze - Jeu 2{% endblock %}
+{% block title %}{{text["game 2"][player.lang_id]}}{% endblock %}
 {% block content %}
 
 <div id="card2" class="w3-card-4 w3-center w3-white animate__animated animate__fadeIn">
 <header class="w3-text-white large w3-padding theme-dark-2">
-    Choisissez un nombre : 
+    {{text["choose a number"][player.lang_id]}} 
 </header>
 <form method="POST">
   <div class="w3-margin w3-lobster">
@@ -14,7 +14,7 @@
       <label class="circle w3-hover-opacity"><input type="radio" name="choice" value={{ choice }} onchange="update_choice(this)" required/>{{ choice }}</label>
     {% endfor %}
   </div>
-  <p><button name="jeu2" type="submit" class="w3-button w3-text-white theme-dark-2">Valider</button></p>
+  <p><button name="jeu2" type="submit" class="w3-button w3-text-white theme-dark-2">{{text["confirm"][player.lang_id]}}</button></p>
   </form>
 </div>
 
