--- a/website/templates/Jeu5-Valider.jinja
+++ b/website/templates/Jeu5-Valider.jinja
@@ -1,20 +1,20 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
-{% extends "base.jinja" %} {% block title %}Flouze - Jeu 5{% endblock %}
+{% extends "base.jinja" %} {% block title %}{{text["game 5"][player.lang_id]}}{% endblock %}
 {% block stars_table %}{% endblock %}
 {% block donation_button %}{% endblock %}
 {% block content %}
 
-  <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn container-jeu-1">
+<div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn container-jeu-1">
   <header class="w3-container w3-padding theme-dark-5">
       {{ player.message }}
   </header>
   <form class="w3-container" method="POST">
-  <div class="flex-horizontal space-around" style="margin:1em 0">
-    <button name="jeu5" type="submit" value="refusé" class="w3-button w3-red" style="width:6em;">Refuser</button>
-    <button name="jeu5" type="submit" value="accepté" class="w3-button theme-dark-5" style="width:6em;">Accpeter</button>
-  </div>
-</form>
-  </div>
+    <div class="flex-horizontal space-around" style="margin:1em 0">
+      <button name="jeu5" type="submit" value="refusé" class="w3-button w3-red" style="width:6em;">{{text["reject"][player.lang_id]}}</button>
+      <button name="jeu5" type="submit" value="accepté" class="w3-button theme-dark-5" style="width:6em;">{{text["accept"][player.lang_id]}}</button>
+    </div>
+  </form>
+</div>
 
 {% endblock %}
