--- a/website/templates/Jeu5-proposition.jinja
+++ b/website/templates/Jeu5-proposition.jinja
@@ -2,27 +2,27 @@
 {% set config = game.config %}
 {% set other_players = engine.current_game.other_players %}
 {% extends "base.jinja" %}
-{% block title %}Flouze - Jeu 5{% endblock %}
+{% block title %}{{text["game 5"][player.lang_id]}}{% endblock %}
 {% block stars_table %}{% endblock %}
 {% block donation_button %}{% endblock %}
 {% block content %}
 
 <form method="POST" class="w3-card-4 w3-center medium w3-white animate__animated animate__fadeIn" style="width:320px;">
 <header class="w3-text-white w3-padding theme-dark-5">
-    Veuillez faire une offre aux autres joueurs : 
+    {{text["please make an offer"][player.lang_id]}}
 </header>
 <div class="w3-margin-top" style="display:flex; justify-content:center; align-items:center; flex-wrap:wrap; gap:16px">
   {% for other_player in other_players %}
   <div class="w3-card w3-padding {{ other_player.color['name'] }}-light" style="width:140px">
     <b class="w3-xlarge w3-padding">{{ other_player.name }}</b>
-    <input id=proposition{{ loop.index0 }} onchange="update_rest()" class="w3-input w3-border w3-round-large w3-center w3-large" placeholder="Montant" name={{ other_player.name }} type="number" style="width:110px;" required>
+    <input id=proposition{{ loop.index0 }} onchange="update_rest()" class="w3-input w3-border w3-round-large w3-center w3-large" placeholder="{{text['amount'][player.lang_id]}}" name={{ other_player.name }} type="number" style="width:110px;" required>
   </div>
   {% endfor %}
 </div>
 <div class="small w3-card w3-margin w3-padding-small {{ player.color['name'] }}-light">
-Il vous restera <span id="rest"></span> <img src="/static/images/coin.png" class="coin" alt="Coin"><br>
+{{text["remaining money 1"][player.lang_id]}} <span id="rest"></span> <img src="/static/images/coin.png" class="coin" alt="Coin"> {{text["remaining money 2"][player.lang_id]}}<br>
 </div>
-<button type="submit" name="jeu5" value="proposition" class="w3-button theme-light-5 full-width">Faire une proposition</button>
+<button type="submit" name="jeu5" value="proposition" class="w3-button theme-light-5 full-width">{{text["make offer"][player.lang_id]}}</button>
 </form>
 
 <script>
