--- a/website/templates/en_attente_jeu5.jinja
+++ b/website/templates/en_attente_jeu5.jinja
@@ -1,12 +1,12 @@
 {% set game = engine.current_game %}
 {% extends "base.jinja" %}
-{% block title %}Flouze - Jeu 5{% endblock %}
+{% block title %}{{text["game 5"][player.lang_id]}}{% endblock %}
 {% block stars_table %}{% endblock %}
 {% block donation_button %}{% endblock %}
 {% block content %}
 
 <div class="w3-panel w3-pale-blue w3-round-large w3-border w3-border-blue w3-center w3-padding animate__animated animate__fadeIn">
-  En attente des autres joueurs...<br>
+  {{text["waiting"][player.lang_id]}}<br>
   <span class="large" id="count">{{ game.current_waiting_count - 1 }} / 4</span>
 </div>
 
