--- a/website/templates/Jeu4-reveal.jinja
+++ b/website/templates/Jeu4-reveal.jinja
@@ -10,15 +10,15 @@
   {% for player_it in engine.players %}
     <div class="flip-card card-size">
       <div id="card{{ loop.index0 }}" {% if reveal_state[loop.index0] %} style="transform: rotateY(180deg)" {% endif %} class="flip-card-inner">
-        <div class="flip-card-front {{ player_it.color['name'] }}-light">
+        <div class="flip-card-front {{ player_it.color }}-light">
           <b class="w3-xlarge">{{ player_it.name}}</b>
         </div>
-        <div class="flip-card-back {{ player_it.color['name'] }}-light flex-vertical center-items">
+        <div class="flip-card-back {{ player_it.color }}-light flex-vertical center-items">
           <b class="w3-xlarge">{{ player_it.name }}</b>
         {% if prizes[player_it.choice] == "star" %}
-        <div class="w3-xlarge {% if player_it.choice == 3 %} w3-text-teal {% else %} w3-text-white {% endif %} {{ player_it.color['name'] }}-dark" style="margin:6px; padding:0.2em 0.5em"><i class="fa fa-star" style="position:relative; top:2px;"></i></div>
+        <div class="w3-xlarge {% if player_it.choice == 3 %} w3-text-teal {% else %} w3-text-white {% endif %} {{ player_it.color }}-dark" style="margin:6px; padding:0.2em 0.5em"><i class="fa fa-star" style="position:relative; top:2px;"></i></div>
         {% else %}
-        <div class="w3-xlarge w3-text-white {{ player_it.color['name'] }}-dark" style="margin:6px; padding:0.2em 0.7em">{{ prizes[player_it.choice] }} <img src="/static/images/coin.png" class="coin" alt="Coin"></div>
+        <div class="w3-xlarge w3-text-white {{ player_it.color }}-dark" style="margin:6px; padding:0.2em 0.7em">{{ prizes[player_it.choice] }} <img src="/static/images/coin.png" class="coin" alt="Coin"></div>
         {% endif %}
         </div>
       </div>
