--- a/website/templates/choIx_couleurs.jinja
+++ b/website/templates/choIx_couleurs.jinja
@@ -7,11 +7,11 @@
 {% block content %}
 
 <div class="w3-center w3-display-middle large w3-padding-small" style="width:100%; height:100%; max-width:700px; display:flex; flex-direction:column; justify-content:space-around">
-{% for color, owner in zip(game.colors, game.owner) %}
+{% for color in game.colors %}
 <div style="height:19vh; margin:2%;">
-    <button onclick="select_color({{color['id']}});" id={{color["name"]}} type="submit" name="couleurs" value={{ color["id"] }} class="w3-round-large {{ color['name'] }}-light border-{{ color['name'] }}" style="width:100%; height:100%;">
-    {% if owner %}
-    {{ owner.name }}
+    <button onclick="select_color('{{color}}');" id={{color}} type="submit" name="couleurs" value={{color}} class="w3-round-large {{ color }}-light border-{{ color }}" style="width:100%; height:100%;">
+    {% if color in game.owner %}
+    {{ game.owner[color].name }}
     {% endif %}
     </button>
 </div>
@@ -20,8 +20,8 @@
 
 {% endblock %}
 {% block additionnal_script %}
-    function select_color(color_id) {
-      socket.emit('select_color', color_id);
+    function select_color(color) {
+      socket.emit('select_color', color);
     }
 {% endblock %}
 
