--- a/website/templates/title.jinja
+++ b/website/templates/title.jinja
@@ -8,7 +8,7 @@
 
 <div class="w3-card-4 w3-center animate__animated animate__zoomIn theme-light-{{ game.game_nb }}">
   <div class="w3-container w3-text-white theme-dark-{{ game.game_nb }} large" style="margin:0.3em; padding:0.3em 0.9em">
-    {{ config["title"] }}
+    {{ config["title"][player.lang_id]}}
   </div>
 </div>
 <iframe src="{{ url_for('static', filename='animations/Jeu%d.sozi.html' % game.game_nb) }}" class="anim" style="-webkit-backdrop-filter: blur(0.9vw); backdrop-filter: blur(0.9vw);" frameBorder="0" onload="var player = this.contentWindow.sozi.player; player.moveToFrame({{ game.frame_id }} % player.presentation.frames.length);">
