fix for decisions (language support) - not tested

--- a/website/templates/Jeu5-Valider.jinja
+++ b/website/templates/Jeu5-Valider.jinja
@@ -11,8 +11,8 @@
   </header>
   <form class="w3-container" method="POST">
     <div class="flex-horizontal space-around" style="margin:1em 0">
-      <button name="jeu5" type="submit" value="refusé" class="w3-button w3-red" style="width:6em;">{{text["reject"][player.lang_id]}}</button>
-      <button name="jeu5" type="submit" value="accepté" class="w3-button theme-dark-5" style="width:6em;">{{text["accept"][player.lang_id]}}</button>
+      <button name="jeu5" type="submit" value="declined" class="w3-button w3-red" style="width:6em;">{{text["decline"][player.lang_id]}}</button>
+      <button name="jeu5" type="submit" value="accepted" class="w3-button theme-dark-5" style="width:6em;">{{text["accept"][player.lang_id]}}</button>
     </div>
   </form>
 </div>
