--- a/website/templates/en_attente_jeu5.jinja
+++ b/website/templates/en_attente_jeu5.jinja
@@ -7,7 +7,7 @@
 
 <div class="w3-panel w3-pale-blue w3-round-large w3-border w3-border-blue w3-center w3-padding animate__animated animate__fadeIn">
   {{text["waiting"][player.lang_id]}}<br>
-  <span class="large" id="count">{{ game.current_waiting_count - 1 }} / {{ len(game.other_players) }}</span>
+  <span class="large" id="count">{{ game.current_waiting_count - 1 }} / {{ game.other_players|length }}</span>
 </div>
 
 {% endblock %}
