--- a/website/static/flouze.css
+++ b/website/static/flouze.css
@@ -210,15 +210,17 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .border-5{border:5px solid #c470d4;}
 
 /* Custom */
-.star-table{float:left;}
-.star-cell{padding:0.05em 0.3em; flex-grow:1; align-items:center; gap:0.2em}
-
 .small{font-size:min(21px, 3vh)}
 .medium{font-size:min(25px, 3.5vh)}
 .large{font-size:min(35px, 5vh)}
 .huge{font-size:min(42px, 6vh)}
 
 .top-bar{height:min(63px, 9vh); display: flex; flex-direction: row-reverse;}
+
+#star-table{float:left; z-index: 10; transition: all 0.5s;}
+#star-table.minimized {transform: translateY(-50%);}
+
+.star-cell{padding:0.05em 0.3em; flex-grow:1; align-items:center; gap:0.2em}
 
 @media (min-height:680px){.margins-partager{margin:8px;}}
 
@@ -293,7 +295,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 #history {z-index:3;padding-bottom:7em;position:fixed;bottom:0;width:100%;height:100%;overflow:auto;background-color:rgba(0,0,0,0.4);transition: all 0.5s;}
 
 #history_list.hidden {transform: translateY(-100%);}
-#history_list {margin:auto;position:relative;width:100%;max-width:600px; transition: all 0.8s;}
+#history_list {margin:auto; position:relative; width:100%; max-width:600px; transition: all 0.8s;}
 
 #language_list.hidden {visibility: hidden; opacity:0; transform: scale(0);}
 #language_list {transition: all 0.8s;}
