--- a/website/templates/base.jinja
+++ b/website/templates/base.jinja
@@ -24,7 +24,7 @@
 
   <!--Stars Table-->
   {% block stars_table %}
-  <div class="flex-vertical star-table">
+  <div id="star-table" class="flex-vertical minimized" onclick="document.getElementById('star-table').classList.toggle('minimized');">
     {% for player_it in engine.players %}
       <div class="star-cell small space-between flex-horizontal {{ player_it.color }}-light">
         {{ player_it.name }}
